lower achievements threshold by specials duration

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -4,7 +4,9 @@
   algo: duration
   filters:
     franchise: fullmetal_alchemist
-  threshold: 97%
+    not_anime_ids:
+    - 10842
+  threshold: 95.3%
   metadata:
     title_ru: Стальной алхимик
     image:
@@ -51,7 +53,7 @@
   algo: duration
   filters:
     franchise: clannad
-  threshold: 100%
+  threshold: 96.1%
   metadata:
     title_ru: Кланнад
     image:
@@ -106,7 +108,7 @@
   algo: duration
   filters:
     franchise: hajime_no_ippo
-  threshold: 97%
+  threshold: 96.2%
   metadata:
     title_ru: Первый шаг
     image:
@@ -128,7 +130,7 @@
   algo: duration
   filters:
     franchise: boku_no_hero_academia
-  threshold: 100%
+  threshold: 98.5%
   metadata:
     title_ru: Моя геройская академия
     image:
@@ -161,7 +163,7 @@
   algo: duration
   filters:
     franchise: bakuman
-  threshold: 100%
+  threshold: 96.7%
   metadata:
     title_ru: Бакуман
     image:
@@ -237,7 +239,7 @@
   algo: duration
   filters:
     franchise: aria_the_ova
-  threshold: 100%
+  threshold: 94.5%
   metadata:
     title_ru: Ария
     image:
@@ -286,7 +288,7 @@
   algo: duration
   filters:
     franchise: kuroko_no_basket
-  threshold: 97%
+  threshold: 96.0%
   metadata:
     title_ru: Баскетбол Куроко
     image:
@@ -382,7 +384,7 @@
   algo: duration
   filters:
     franchise: yamato
-  threshold: 95%
+  threshold: 94.1%
   metadata:
     title_ru: Космический линкор Ямато
     image:
@@ -393,7 +395,7 @@
   algo: duration
   filters:
     franchise: berserk
-  threshold: 97%
+  threshold: 96.8%
   metadata:
     title_ru: Берсерк
     image:
@@ -437,7 +439,7 @@
   algo: duration
   filters:
     franchise: umineko_no_naku_koro_ni
-  threshold: 97%
+  threshold: 96.6%
   metadata:
     title_ru: Когда плачут
     image:
@@ -477,7 +479,7 @@
   algo: duration
   filters:
     franchise: sket_dance
-  threshold: 100%
+  threshold: 98.7%
   metadata:
     title_ru: Скет Данс
     image:
@@ -534,7 +536,7 @@
   algo: duration
   filters:
     franchise: durarara
-  threshold: 100%
+  threshold: 96.2%
   metadata:
     title_ru: Дюрарара!!
     image:
@@ -545,7 +547,7 @@
   algo: duration
   filters:
     franchise: working
-  threshold: 100%
+  threshold: 96.1%
   metadata:
     title_ru: Работа!!
     image:
@@ -649,7 +651,7 @@
   algo: duration
   filters:
     franchise: hikaru_no_go
-  threshold: 100%
+  threshold: 94.5%
   metadata:
     title_ru: Хикару и Го
     image:
@@ -682,7 +684,7 @@
   algo: duration
   filters:
     franchise: full_metal_panic
-  threshold: 100%
+  threshold: 94.6%
   metadata:
     title_ru: Стальная тревога
     image:
@@ -750,7 +752,7 @@
     not_anime_ids:
     - 27829
     - 32264
-  threshold: 100%
+  threshold: 98.6%
   metadata:
     title_ru: Индекс волшебства
     image:
@@ -805,7 +807,7 @@
   algo: duration
   filters:
     franchise: city_hunter
-  threshold: 95%
+  threshold: 94.6%
   metadata:
     title_ru: Городской охотник
     image:
@@ -818,7 +820,7 @@
     franchise: snow_halation
     not_anime_ids:
     - 21853
-  threshold: 97%
+  threshold: 96.6%
   metadata:
     title_ru: Живая любовь!
     image:
@@ -842,7 +844,7 @@
   algo: duration
   filters:
     franchise: touch
-  threshold: 97%
+  threshold: 93.9%
   metadata:
     title_ru: Касание
     image:
@@ -1181,7 +1183,7 @@
   algo: duration
   filters:
     franchise: to_love_ru
-  threshold: 100%
+  threshold: 97.5%
   metadata:
     title_ru: Любовные неприятности
     image:
@@ -1214,7 +1216,7 @@
   algo: duration
   filters:
     franchise: high_school_dxd
-  threshold: 97%
+  threshold: 94.9%
   metadata:
     title_ru: Старшая школа DxD
     image:
@@ -1282,7 +1284,7 @@
     franchise: blood
     not_anime_ids:
     - 14077
-  threshold: 100%
+  threshold: 97.0%
   metadata:
     title_ru: Кровь
     image:
@@ -1293,7 +1295,7 @@
   algo: duration
   filters:
     franchise: fushigi_yuugi
-  threshold: 100%
+  threshold: 99%
   metadata:
     title_ru: Таинственная игра
     image:
@@ -1339,7 +1341,7 @@
   algo: duration
   filters:
     franchise: utawarerumono
-  threshold: 97%
+  threshold: 94.7%
   metadata:
     title_ru: Прославленный
     image:
@@ -1350,7 +1352,7 @@
   algo: duration
   filters:
     franchise: shakugan_no_shana
-  threshold: 97%
+  threshold: 91.2%
   metadata:
     title_ru: Пламенный взор Шаны
     image:
@@ -1372,7 +1374,7 @@
   algo: duration
   filters:
     franchise: soukyuu_no_fafner
-  threshold: 95%
+  threshold: 94.1%
   metadata:
     title_ru: Небесный Фафнир
     image:
@@ -1394,7 +1396,7 @@
   algo: duration
   filters:
     franchise: zero_no_tsukaima
-  threshold: 100%
+  threshold: 96.3%
   metadata:
     title_ru: Подручный Луизы-Нулизы
     image:
@@ -1405,7 +1407,7 @@
   algo: duration
   filters:
     franchise: toriko
-  threshold: 100%
+  threshold: 98.1%
   metadata:
     title_ru: Торико
     image:
@@ -1460,7 +1462,7 @@
   algo: duration
   filters:
     franchise: zettai_karen_children
-  threshold: 100%
+  threshold: 98.4%
   metadata:
     title_ru: Восхитительные дети
     image:
@@ -1534,7 +1536,7 @@
   algo: duration
   filters:
     franchise: seiren
-  threshold: 100%
+  threshold: 95.6%
   metadata:
     title_ru: Нежный укус
     image:
@@ -1589,7 +1591,7 @@
   algo: duration
   filters:
     franchise: force_live
-  threshold: 100%
+  threshold: 98.3%
   metadata:
     title_ru: Поющий принц
     image:
@@ -1723,7 +1725,7 @@
   algo: duration
   filters:
     franchise: super_robot_taisen_og
-  threshold: 100%
+  threshold: 98.1%
   metadata:
     title_ru: Войны супер-роботов
     image:
@@ -1756,7 +1758,7 @@
   algo: duration
   filters:
     franchise: futari_wa_milky_holmes
-  threshold: 95%
+  threshold: 94.9%
   metadata:
     title_ru: Детективное агентство Милки Холмс
     image:
@@ -1767,7 +1769,7 @@
   algo: duration
   filters:
     franchise: di_gi_charat
-  threshold: 95%
+  threshold: 94.3%
   metadata:
     title_ru: Ди-Ги Карат
     image:
@@ -1833,7 +1835,7 @@
   algo: duration
   filters:
     franchise: to_heart
-  threshold: 95%
+  threshold: 94.4%
   metadata:
     title_ru: Для сердца
     image:
@@ -1888,7 +1890,7 @@
   algo: duration
   filters:
     franchise: sonic
-  threshold: 100%
+  threshold: 99%
   metadata:
     title_ru: Соник
     image:
@@ -1899,7 +1901,7 @@
   algo: duration
   filters:
     franchise: believe
-  threshold: 100%
+  threshold: 99%
   metadata:
     title_ru: Приключения во времени
     image:
