--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1176,7 +1176,7 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/594921.jpg
     topic_id: 247360
-- neko_id: koneko_no_chii
+- neko_id: koneko_no_chi
   level: 1
   algo: duration
   filters:
