--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -2066,3 +2066,17 @@
     image:
     - https://dere.shikimori.org/system/user_images/original/84020/588514.jpg
     topic_id: 247360
+    franchise: free
+  threshold: 100%
+  metadata:
+    title_ru: Вольный стиль!
+    image:
+    - https://moe.shikimori.org/system/user_images/original/34807/669387.jpg
+    topic_id: 247360
+        franchise: sengoku_basara
+  threshold: 100%
+  metadata:
+    title_ru: Эпоха смут
+    image:
+    - https://desu.shikimori.org/system/user_images/original/34807/669388.jpg
+    topic_id: 247360
