--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -54,7 +54,7 @@
   algo: duration
   filters:
     franchise: sword_art_online
-  threshold: 86.1%
+  threshold: 86.3%
   metadata:
     title_ru: Мастера Меча Онлайн
     image:
@@ -87,7 +87,7 @@
   algo: duration
   filters:
     franchise: code_geass
-  threshold: 89.6%
+  threshold: 90.1%
   metadata:
     title_ru: Код Гиас
     image:
@@ -104,17 +104,6 @@
     image:
     - https://moe.shikimori.org/system/user_images/original/34807/624132.jpg
     topic_id: 247360
-- neko_id: kuroshitsuji
-  level: 1
-  algo: duration
-  filters:
-    franchise: kuroshitsuji
-  threshold: 95%
-  metadata:
-    title_ru: Тёмный дворецкий
-    image:
-    - https://kawai.shikimori.org/system/user_images/original/34807/594196.jpg
-    topic_id: 247360
 - neko_id: boku_no_hero_academia
   level: 1
   algo: duration
@@ -125,6 +114,17 @@
     title_ru: Моя геройская академия
     image:
     - https://nyaa.shikimori.org/system/user_images/original/84020/591715.jpg
+    topic_id: 247360
+- neko_id: kuroshitsuji
+  level: 1
+  algo: duration
+  filters:
+    franchise: kuroshitsuji
+  threshold: 95%
+  metadata:
+    title_ru: Тёмный дворецкий
+    image:
+    - https://kawai.shikimori.org/system/user_images/original/34807/594196.jpg
     topic_id: 247360
 - neko_id: fullmetal_alchemist
   level: 1
@@ -142,7 +142,7 @@
   algo: duration
   filters:
     franchise: fairy_tail
-  threshold: 96.6%
+  threshold: 96.4%
   metadata:
     title_ru: Сказка о Хвосте феи
     image:
@@ -186,7 +186,7 @@
   algo: duration
   filters:
     franchise: nanatsu_no_taizai
-  threshold: 90.9%
+  threshold: 91.5%
   metadata:
     title_ru: Семь смертных грехов
     image:
@@ -363,6 +363,8 @@
     image:
     - https://nyaa.shikimori.org/system/user_images/original/84020/585005.jpg
     topic_id: 247360
+    allowed_recap_ids:
+    - 15711
 - neko_id: pokemon
   level: 1
   algo: duration
@@ -390,7 +392,7 @@
   algo: duration
   filters:
     franchise: free
-  threshold: 92.1%
+  threshold: 95%
   metadata:
     title_ru: Вольный стиль!
     image:
@@ -484,6 +486,11 @@
     image:
     - https://moe.shikimori.org/system/user_images/original/84020/587962.jpg
     topic_id: 247360
+    allowed_recap_ids:
+    - 2269
+    - 14007
+    - 20667
+    - 24371
 - neko_id: shakugan_no_shana
   level: 1
   algo: duration
@@ -819,7 +826,7 @@
   algo: duration
   filters:
     franchise: garo
-  threshold: 92.9%
+  threshold: 93.2%
   metadata:
     title_ru: Гаро
     image:
@@ -852,7 +859,7 @@
   algo: duration
   filters:
     franchise: eureka_seven
-  threshold: 96.3%
+  threshold: 95%
   metadata:
     title_ru: Эврика 7
     image:
@@ -869,17 +876,6 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/592671.jpg
     topic_id: 247360
-- neko_id: hayate_no_gotoku
-  level: 1
-  algo: duration
-  filters:
-    franchise: hayate_no_gotoku
-  threshold: 95%
-  metadata:
-    title_ru: Боевой дворецкий Хаятэ!
-    image:
-    - https://moe.shikimori.org/system/user_images/original/84020/593337.jpg
-    topic_id: 247360
 - neko_id: nen_joou
   level: 1
   algo: duration
@@ -891,12 +887,23 @@
     image:
     - https://nyaa.shikimori.org/system/user_images/original/34807/594735.jpg
     topic_id: 247360
+- neko_id: hayate_no_gotoku
+  level: 1
+  algo: duration
+  filters:
+    franchise: hayate_no_gotoku
+  threshold: 95%
+  metadata:
+    title_ru: Боевой дворецкий Хаятэ!
+    image:
+    - https://moe.shikimori.org/system/user_images/original/84020/593337.jpg
+    topic_id: 247360
 - neko_id: puchimas
   level: 1
   algo: duration
   filters:
     franchise: puchimas
-  threshold: 87.3%
+  threshold: 87.2%
   metadata:
     title_ru: Идолмастер
     image:
@@ -907,7 +914,7 @@
   algo: duration
   filters:
     franchise: sengoku_basara
-  threshold: 89.1%
+  threshold: 89.3%
   metadata:
     title_ru: Эпоха смут
     image:
@@ -968,17 +975,6 @@
     image:
     - https://dere.shikimori.org/system/user_images/original/84020/594919.jpg
     topic_id: 247360
-- neko_id: tegamibachi
-  level: 1
-  algo: duration
-  filters:
-    franchise: tegamibachi
-  threshold: 84.9%
-  metadata:
-    title_ru: Почтовая пчела
-    image:
-    - https://moe.shikimori.org/system/user_images/original/84020/592667.jpg
-    topic_id: 247360
 - neko_id: school_rumble
   level: 1
   algo: duration
@@ -989,6 +985,17 @@
     title_ru: Школьный переполох
     image:
     - https://moe.shikimori.org/system/user_images/original/84020/588567.jpg
+    topic_id: 247360
+- neko_id: tegamibachi
+  level: 1
+  algo: duration
+  filters:
+    franchise: tegamibachi
+  threshold: 84.9%
+  metadata:
+    title_ru: Почтовая пчела
+    image:
+    - https://moe.shikimori.org/system/user_images/original/84020/592667.jpg
     topic_id: 247360
 - neko_id: sket_dance
   level: 1
@@ -1012,17 +1019,6 @@
     image:
     - https://nyaa.shikimori.org/system/user_images/original/34807/589085.jpg
     topic_id: 247360
-- neko_id: gatchaman
-  level: 1
-  algo: duration
-  filters:
-    franchise: gatchaman
-  threshold: 91.1%
-  metadata:
-    title_ru: Гатчамен
-    image:
-    - https://moe.shikimori.org/system/user_images/original/84020/592712.jpg
-    topic_id: 247360
 - neko_id: diamond_no_ace
   level: 1
   algo: duration
@@ -1033,6 +1029,17 @@
     title_ru: Путь аса
     image:
     - https://nyaa.shikimori.org/system/user_images/original/84020/587845.jpg
+    topic_id: 247360
+- neko_id: gatchaman
+  level: 1
+  algo: duration
+  filters:
+    franchise: gatchaman
+  threshold: 91.1%
+  metadata:
+    title_ru: Гатчамен
+    image:
+    - https://moe.shikimori.org/system/user_images/original/84020/592712.jpg
     topic_id: 247360
 - neko_id: aria_the_ova
   level: 1
@@ -1056,6 +1063,8 @@
     image:
     - https://moe.shikimori.org/system/user_images/original/84020/588982.jpg
     topic_id: 247360
+    allowed_recap_ids:
+    - 2336
 - neko_id: black_jack
   level: 1
   algo: duration
@@ -1144,6 +1153,17 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/587956.jpg
     topic_id: 247360
+- neko_id: inazuma_eleven
+  level: 1
+  algo: duration
+  filters:
+    franchise: inazuma_eleven
+  threshold: 94.2%
+  metadata:
+    title_ru: Инадзума 11
+    image:
+    - https://desu.shikimori.org/system/user_images/original/84020/592658.jpg
+    topic_id: 247360
 - neko_id: sonic
   level: 1
   algo: duration
@@ -1154,17 +1174,6 @@
     title_ru: Соник
     image:
     - https://moe.shikimori.org/system/user_images/original/84020/593372.jpg
-    topic_id: 247360
-- neko_id: inazuma_eleven
-  level: 1
-  algo: duration
-  filters:
-    franchise: inazuma_eleven
-  threshold: 94.4%
-  metadata:
-    title_ru: Инадзума 11
-    image:
-    - https://desu.shikimori.org/system/user_images/original/84020/592658.jpg
     topic_id: 247360
 - neko_id: yu_gi_oh
   level: 1
@@ -1353,17 +1362,6 @@
     image:
     - https://desu.shikimori.org/system/user_images/original/84020/573803.jpg
     topic_id: 247360
-- neko_id: transformers
-  level: 1
-  algo: duration
-  filters:
-    franchise: transformers
-  threshold: 80%
-  metadata:
-    title_ru: Трансформеры
-    image:
-    - https://desu.shikimori.org/system/user_images/original/84020/588998.jpg
-    topic_id: 247360
 - neko_id: doraemon
   level: 1
   algo: duration
@@ -1374,6 +1372,17 @@
     title_ru: Дораэмон
     image:
     - https://desu.shikimori.org/system/user_images/original/34807/590513.jpg
+    topic_id: 247360
+- neko_id: transformers
+  level: 1
+  algo: duration
+  filters:
+    franchise: transformers
+  threshold: 80%
+  metadata:
+    title_ru: Трансформеры
+    image:
+    - https://desu.shikimori.org/system/user_images/original/84020/588998.jpg
     topic_id: 247360
 - neko_id: toriko
   level: 1
@@ -1446,7 +1455,7 @@
   algo: duration
   filters:
     franchise: pripara
-  threshold: 94.4%
+  threshold: 93.7%
   metadata:
     title_ru: При Пара
     image:
@@ -1518,6 +1527,17 @@
     image:
     - https://dere.shikimori.org/system/user_images/original/34807/588864.jpg
     topic_id: 247360
+- neko_id: maison_ikkoku
+  level: 1
+  algo: duration
+  filters:
+    franchise: maison_ikkoku
+  threshold: 95.5%
+  metadata:
+    title_ru: Доходный дом Иккоку
+    image:
+    - https://moe.shikimori.org/system/user_images/original/84020/591782.jpg
+    topic_id: 247360
 - neko_id: kimagure_orange_road
   level: 1
   algo: duration
@@ -1531,16 +1551,16 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/587931.jpg
     topic_id: 247360
-- neko_id: maison_ikkoku
+- neko_id: muumin
   level: 1
   algo: duration
   filters:
-    franchise: maison_ikkoku
-  threshold: 95.5%
+    franchise: muumin
+  threshold: 98.6%
   metadata:
-    title_ru: Доходный дом Иккоку
+    title_ru: Муми-тролль
     image:
-    - https://moe.shikimori.org/system/user_images/original/84020/591782.jpg
+    - https://moe.shikimori.org/system/user_images/original/84020/587882.jpg
     topic_id: 247360
 - neko_id: candy_candy
   level: 1
@@ -1553,16 +1573,16 @@
     image:
     - https://kawai.shikimori.org/system/user_images/original/84020/593346.jpg
     topic_id: 247360
-- neko_id: muumin
+- neko_id: cyborg
   level: 1
   algo: duration
   filters:
-    franchise: muumin
-  threshold: 98.6%
+    franchise: cyborg
+  threshold: 95%
   metadata:
-    title_ru: Муми-тролль
+    title_ru: Киборг 009
     image:
-    - https://moe.shikimori.org/system/user_images/original/84020/587882.jpg
+    - https://moe.shikimori.org/system/user_images/original/84020/588532.jpg
     topic_id: 247360
 - neko_id: sakura_taisen
   level: 1
@@ -1574,17 +1594,6 @@
     title_ru: 'Сакура: Война миров'
     image:
     - https://desu.shikimori.org/system/user_images/original/84020/588988.jpg
-    topic_id: 247360
-- neko_id: cyborg
-  level: 1
-  algo: duration
-  filters:
-    franchise: cyborg
-  threshold: 95%
-  metadata:
-    title_ru: Киборг 009
-    image:
-    - https://moe.shikimori.org/system/user_images/original/84020/588532.jpg
     topic_id: 247360
 - neko_id: ehon_yose
   level: 1
@@ -1767,7 +1776,7 @@
   algo: duration
   filters:
     franchise: captain_tsubasa
-  threshold: 96.4%
+  threshold: 96.5%
   metadata:
     title_ru: Капитан Цубаса
     image:
