restore not_anime_ids

--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -26,11 +26,13 @@
     - 5205
     - 6624
     - 6954
+    - 13183
     - 14807
+    - 19165
     - 22763
     - 22847
     - 23697
-  threshold: 88.8%
+  threshold: 90%
   metadata:
     title_ru: Судьба
     image:
@@ -42,8 +44,10 @@
   filters:
     franchise: shingeki_no_kyojin
     not_anime_ids:
+    - 19285
+    - 19391
     - 35267
-  threshold: 89.2%
+  threshold: 95%
   metadata:
     title_ru: Вторжение гигантов
     image:
@@ -54,7 +58,10 @@
   algo: duration
   filters:
     franchise: sword_art_online
-  threshold: 86.3%
+    not_anime_ids:
+    - 27891
+    - 37831
+  threshold: 88.3%
   metadata:
     title_ru: Мастера Меча Онлайн
     image:
@@ -65,6 +72,9 @@
   algo: duration
   filters:
     franchise: hanamonogatari
+    not_anime_ids:
+    - 6948
+    - 36796
   threshold: 95%
   metadata:
     title_ru: Цикл историй
@@ -87,7 +97,19 @@
   algo: duration
   filters:
     franchise: code_geass
-  threshold: 90.1%
+    not_anime_ids:
+    - 1953
+    - 2124
+    - 5163
+    - 8728
+    - 18881
+    - 23359
+    - 31145
+    - 32240
+    - 33155
+    - 33156
+    - 33360
+  threshold: 95%
   metadata:
     title_ru: Код Гиас
     image:
@@ -120,6 +142,9 @@
   algo: duration
   filters:
     franchise: kuroshitsuji
+    not_anime_ids:
+    - 6163
+    - 8068
   threshold: 95%
   metadata:
     title_ru: Тёмный дворецкий
@@ -131,7 +156,7 @@
   algo: duration
   filters:
     franchise: fullmetal_alchemist
-  threshold: 94.1%
+  threshold: 94.8%
   metadata:
     title_ru: Стальной алхимик
     image:
@@ -148,6 +173,8 @@
     image:
     - https://dere.shikimori.org/system/user_images/original/84020/587404.jpg
     topic_id: 247360
+    not_anime_ids:
+    - 246
 - neko_id: shokugeki_no_souma
   level: 1
   algo: duration
@@ -211,7 +238,14 @@
   algo: duration
   filters:
     franchise: one_piece
-  threshold: 92.7%
+    not_anime_ids:
+    - 34165
+    - 32437
+    - 36239
+    - 36240
+    - 36241
+    - 36242
+  threshold: 92.6%
   metadata:
     title_ru: Ван-Пис
     image:
@@ -222,6 +256,8 @@
   algo: duration
   filters:
     franchise: koro_sensei_q
+    not_anime_ids:
+    - 33511
   threshold: 94.1%
   metadata:
     title_ru: Класс убийц
@@ -233,7 +269,9 @@
   algo: duration
   filters:
     franchise: zero_no_tsukaima
-  threshold: 96.3%
+    not_anime_ids:
+    - 6489
+  threshold: 98%
   metadata:
     title_ru: Подручный Луизы-Нулизы
     image:
@@ -245,9 +283,11 @@
   filters:
     franchise: ghost_in_the_shell
     not_anime_ids:
+    - 2448
     - 10870
+    - 10948
     - 31617
-  threshold: 81.7%
+  threshold: 86.7%
   metadata:
     title_ru: Призрак в доспехах
     image:
@@ -269,6 +309,8 @@
   algo: duration
   filters:
     franchise: jojo_no_kimyou_na_bouken
+    not_anime_ids:
+    - 3603
   threshold: 95%
   metadata:
     title_ru: Невероятное приключение ДжоДжо
@@ -313,6 +355,8 @@
   algo: duration
   filters:
     franchise: berserk
+    not_anime_ids:
+    - 35009
   threshold: 95%
   metadata:
     title_ru: Берсерк
@@ -324,6 +368,9 @@
   algo: duration
   filters:
     franchise: toaru_majutsu_no_index
+    not_anime_ids:
+    - 27829
+    - 32264
   threshold: 95%
   metadata:
     title_ru: Индекс волшебства
@@ -371,7 +418,15 @@
   algo: duration
   filters:
     franchise: pokemon
-  threshold: 92.4%
+    not_anime_ids:
+    - 11009
+    - 11019
+    - 11073
+    - 23849
+    - 31373
+    - 32699
+    - 36835
+  threshold: 92.5%
   metadata:
     title_ru: Покемон
     image:
@@ -426,7 +481,10 @@
   algo: duration
   filters:
     franchise: snow_halation
-  threshold: 91.3%
+    not_anime_ids:
+    - 21853
+    - 36473
+  threshold: 95%
   metadata:
     title_ru: Живая любовь!
     image:
@@ -470,7 +528,9 @@
   algo: duration
   filters:
     franchise: initial_d
-  threshold: 92.4%
+    not_anime_ids:
+    - 12725
+  threshold: 95%
   metadata:
     title_ru: Инициал Ди
     image:
@@ -481,7 +541,12 @@
   algo: duration
   filters:
     franchise: gundam
-  threshold: 85.9%
+    not_anime_ids:
+    - 8839
+    - 22435
+    - 23943
+    - 32898
+  threshold: 86%
   metadata:
     title_ru: Мобильный воин Гандам
     image:
@@ -498,18 +563,19 @@
   algo: duration
   filters:
     franchise: shakugan_no_shana
-  threshold: 93.2%
+    not_anime_ids:
+    - 6330
+    - 28603
+    - 17551
+    - 14957
+    - 1815
+  threshold: 93.6%
   metadata:
     title_ru: Пламенный взор Шаны
     image:
     - http://i.imgur.com/okj7B9r.png
     topic_id: 247360
   generator:
-    ignored_ids:
-    - 14957
-    - 17551
-    - 28603
-    - 6330
 - neko_id: working
   level: 1
   algo: duration
@@ -581,6 +647,8 @@
   algo: duration
   filters:
     franchise: rurouni_kenshin
+    not_anime_ids:
+    - 10334
   threshold: 95%
   metadata:
     title_ru: Бродяга Кэнсин
@@ -603,7 +671,10 @@
   algo: duration
   filters:
     franchise: nurarihyon_no_mago
-  threshold: 92%
+    not_anime_ids:
+    - 9731
+    - 11083
+  threshold: 98.9%
   metadata:
     title_ru: Внук Нурарихёна
     image:
@@ -614,7 +685,9 @@
   algo: duration
   filters:
     franchise: blood
-  threshold: 96.2%
+    not_anime_ids:
+    - 14077
+  threshold: 97%
   metadata:
     title_ru: Кровь
     image:
@@ -647,7 +720,9 @@
   algo: duration
   filters:
     franchise: seiren
-  threshold: 95.6%
+    not_anime_ids:
+    - 15951
+  threshold: 96.6%
   metadata:
     title_ru: Нежный укус
     image:
@@ -658,6 +733,8 @@
   algo: duration
   filters:
     franchise: persona
+    not_anime_ids:
+    - 25257
   threshold: 95%
   metadata:
     title_ru: Персона
@@ -713,6 +790,8 @@
   algo: duration
   filters:
     franchise: lupin_iii
+    not_anime_ids:
+    - 5343
   threshold: 80%
   metadata:
     title_ru: Люпен III
@@ -724,6 +803,8 @@
   algo: duration
   filters:
     franchise: amon
+    not_anime_ids:
+    - 35952
   threshold: 95%
   metadata:
     title_ru: Человек-дьявол
@@ -746,6 +827,11 @@
   algo: duration
   filters:
     franchise: tenchi_muyou
+    not_anime_ids:
+    - 1503
+    - 10351
+    - 28531
+    - 37789
   threshold: 90%
   metadata:
     title_ru: Тэнти — лишний!
@@ -790,6 +876,8 @@
   algo: duration
   filters:
     franchise: tennis_no_ouji_sama
+    not_anime_ids:
+    - 29697
   threshold: 90%
   metadata:
     title_ru: Принц тенниса
@@ -823,7 +911,10 @@
   algo: duration
   filters:
     franchise: utawarerumono
-  threshold: 89.4%
+    not_anime_ids:
+    - 6226
+    - 6743
+  threshold: 95%
   metadata:
     title_ru: Прославленный
     image:
@@ -834,7 +925,9 @@
   algo: duration
   filters:
     franchise: garo
-  threshold: 93.2%
+    not_anime_ids:
+    - 37032
+  threshold: 94.3%
   metadata:
     title_ru: Гаро
     image:
@@ -889,6 +982,9 @@
   algo: duration
   filters:
     franchise: nen_joou
+    not_anime_ids:
+    - 6733
+    - 9344
   threshold: 90%
   metadata:
     title_ru: Галактический экспресс 999
@@ -933,7 +1029,9 @@
   algo: duration
   filters:
     franchise: zettai_karen_children
-  threshold: 98.4%
+    not_anime_ids:
+    - 5849
+  threshold: 100%
   metadata:
     title_ru: Восхитительные дети
     image:
@@ -955,7 +1053,9 @@
   algo: duration
   filters:
     franchise: cardcaptor_sakura
-  threshold: 97%
+    not_anime_ids:
+    - 37595
+  threshold: 97.9%
   metadata:
     title_ru: Сакура — собирательница карт
     image:
@@ -988,7 +1088,7 @@
   algo: duration
   filters:
     franchise: school_rumble
-  threshold: 96.2%
+  threshold: 100%
   metadata:
     title_ru: Школьный переполох
     image:
@@ -1054,7 +1154,9 @@
   algo: duration
   filters:
     franchise: aria_the_ova
-  threshold: 94.5%
+    not_anime_ids:
+    - 5196
+  threshold: 95.6%
   metadata:
     title_ru: Ария
     image:
@@ -1090,6 +1192,8 @@
   algo: duration
   filters:
     franchise: yes_precure
+    not_anime_ids:
+    - 10736
   threshold: 92.5%
   metadata:
     title_ru: Хорошенькое лекарство
@@ -1123,6 +1227,13 @@
   algo: duration
   filters:
     franchise: vivid_strike
+    not_anime_ids:
+    - 176
+    - 4849
+    - 32316
+    - 35501
+    - 37933
+    - 37934
   threshold: 95%
   metadata:
     title_ru: Лиричная волшебница Наноха
@@ -1145,7 +1256,9 @@
   algo: duration
   filters:
     franchise: saint_seiya
-  threshold: 90.5%
+    not_anime_ids:
+    - 6153
+  threshold: 90.8%
   metadata:
     title_ru: Рыцари Зодиака
     image:
@@ -1189,7 +1302,13 @@
   algo: duration
   filters:
     franchise: yu_gi_oh
-  threshold: 87.8%
+    not_anime_ids:
+    - 5298
+    - 5458
+    - 16576
+    - 21595
+    - 32346
+  threshold: 88.2%
   metadata:
     title_ru: Югио!
     image:
@@ -1211,7 +1330,9 @@
   algo: duration
   filters:
     franchise: digimon_savers
-  threshold: 93.4%
+    not_anime_ids:
+    - 4712
+  threshold: 93.6%
   metadata:
     title_ru: Приключения Дигимонов
     image:
@@ -1266,7 +1387,9 @@
   algo: duration
   filters:
     franchise: d_c
-  threshold: 94.4%
+    not_anime_ids:
+    - 4508
+  threshold: 95%
   metadata:
     title_ru: С начала
     image:
@@ -1288,7 +1411,11 @@
   algo: duration
   filters:
     franchise: hidamari_sketch
-  threshold: 89.8%
+    not_anime_ids:
+    - 28911
+    - 28913
+    - 28915
+  threshold: 95%
   metadata:
     title_ru: Наброски Хидамари
     image:
@@ -1343,7 +1470,10 @@
   algo: duration
   filters:
     franchise: saki
-  threshold: 86.6%
+    not_anime_ids:
+    - 7759
+    - 30292
+  threshold: 91%
   metadata:
     title_ru: Саки
     image:
@@ -1376,7 +1506,9 @@
   algo: duration
   filters:
     franchise: doraemon
-  threshold: 94%
+    not_anime_ids:
+    - 501
+  threshold: 94.1%
   metadata:
     title_ru: Дораэмон
     image:
@@ -1387,7 +1519,7 @@
   algo: duration
   filters:
     franchise: transformers
-  threshold: 80%
+  threshold: 82.8%
   metadata:
     title_ru: Трансформеры
     image:
@@ -1409,7 +1541,9 @@
   algo: duration
   filters:
     franchise: yuu_yuu_hakusho
-  threshold: 98.7%
+    not_anime_ids:
+    - 6964
+  threshold: 98.9%
   metadata:
     title_ru: Отчет о буйстве духов
     image:
@@ -1486,7 +1620,7 @@
   algo: duration
   filters:
     franchise: votoms_finder
-  threshold: 92.2%
+  threshold: 95%
   metadata:
     title_ru: Бронированные воины Вотомы
     image:
@@ -1541,7 +1675,7 @@
   algo: duration
   filters:
     franchise: maison_ikkoku
-  threshold: 95.5%
+  threshold: 98.9%
   metadata:
     title_ru: Доходный дом Иккоку
     image:
@@ -1906,7 +2040,7 @@
   algo: duration
   filters:
     franchise: juusenki_l_gaim
-  threshold: 96.1%
+  threshold: 100%
   metadata:
     title_ru: Тяжёлый металл
     image:
